# bayes-league

./: .gitignore  README.md  manage.py  setup.cfg  setup.py  shell.nix
.github/workflows/: tests.yml
leagues/: admin.py  context_processors.py  forms.py  importing.py  models.py  ranking.py  test_tournament.py  tournament.py  urls.py  views.py
leagues/migrations/: 0001_initial.py  0002_alter_rankingscore_options.py  0003_alter_rankingscore_options.py  0004_alter_player_options.py  0005_auto_20230511_0718.py  0006_alter_match_datetime.py  0007_period_datetime.py  0008_auto_20230714_1112.py  0009_match_stage.py  0010_auto_20230722_0617.py  0011_auto_20230722_0618.py  0012_auto_20230722_0618.py  0013_auto_20230722_0622.py  0014_stage_previous.py  0015_auto_20230726_0933.py  0016_alter_stage_previous.py  0017_alter_stage_previous.py  0018_auto_20230726_1449.py  0019_auto_20230727_0738.py  0020_alter_stage_options.py  0021_rename_previous_stage_included.py  0022_alter_stage_options.py  0023_league_write_key_league_write_protected.py  0024_alter_league_write_key_and_more.py  0025_hometeamplayer_awayteamplayer.py  0026_auto_20230805_0822.py  0027_remove_match_away_team_remove_match_home_team.py  0028_match_away_team_match_home_team.py  0029_alter_rankingscore_options_league_regularisation_and_more.py  0030_alter_league_regularisation.py  0031_alter_league_regularisation.py  0032_league_points_to_win_stage_points_to_win.py  0033_alter_rankingscore_options.py  0034_alter_rankingscore_options.py  0035_alter_league_slug.py  (+17 more)
website/: settings.py  urls.py
(+62 files in other folders)
