[metadata]
name = bayesleague

[options]
install_requires =
    django
    django-ordered-model
    numpy
    scipy
    autograd
scripts =
    manage.py
include_package_data = True
packages = find_namespace:
license = GNU Affero General Public License v3
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3

[options.package_data]
* =
  templates/leagues/*.html
  static/*
  static/leagues/*
